# blocklog-python

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: 03_multi_agent_workflow.py  04_team_management.py
examples/advanced/: 01_human_approval_workflow.py  03_decision_comparison.py
python/: pyproject.toml
python/examples/: 01_quickstart.py  02_stock_trading_agent.py  langchain_alert_demo.py
python/examples/advanced/: 02_incident_investigation.py
python/src/blocklog/: __init__.py  _global.py  approval.py  client.py  compliance.py
python/src/blocklog/api/: approval.py  compliance.py  decisions.py  init.py  verify.py
python/src/blocklog/decorators/: __init__.py  tool.py
python/src/blocklog/integrations/: langchain.py
python/src/blocklog/managers/: __init__.py
python/src/blocklog/transport/: httpx_async.py
src/blocklog/: __init__.py  _init_fn.py  async_client.py  client.py  config.py  exceptions.py  incident.py  replay.py  team_utils.py  verify.py
src/blocklog/api/: auth.py  incidents.py  replay.py  teams.py  traces.py
src/blocklog/context/: managers.py
src/blocklog/decorators/: agent.py
src/blocklog/managers/: decision.py
src/blocklog/models/: auth.py  responses.py  teams.py
src/blocklog/transport/: auth.py  httpx_async.py  httpx_sync.py  retry.py
tests/: conftest.py  test_config.py  test_context.py  test_errors_and_health.py  test_public_api.py
